--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,10 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.21.0",
